Update main.java